[package]
name = "easyeda_to_kicad_lib_ui"
version = "1.3.10"
authors = ["Markus Krause <Krause.Markus@gmx.com>"]
edition = "2024"
rust-version = "1.91" # when changing here, also change in rust-toolchain file and release.yml


[dependencies]
reqwest = { version = "0.13.1", default-features = false, features = [
    "blocking",
    "rustls",
] }
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "x11",           # for Linux
    "wayland",       # for Linux
] }
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
image = { version = "0.25.9", features = ["jpeg", "png"] }
egui-dropdown = "0.14.0"
log = "0.4.29"
urlencoding = "2.1.3"
subprocess = "0.2.9"
serde_json = "1.0.148"
regex = "1.12.2"
indexmap = "2.12.1"
tempfile = "3.24.0"
glob = "0.3.2"
arboard = "3.5.0"
# this is needed to avoid edition2024 errors
mime = "0.3.17"
mime_guess2 = "=2.3.1"

# You only need serde if you want app persistence:
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
# for windows icon embedding
winres = "0.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.56"


# [profile.release]
# opt-level = 2 # fast and small wasm

[profile.release]
opt-level = 3     # Optimize for speed without exploding size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
